fixing bug in update car
